// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getIconLinks() format jsx should return icon link for ['360'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/360.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['accessibility'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/accessibility.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['activeCabinVentilation'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/active-cabin-ventilation.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['add'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/add.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['adjust'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/adjust.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['arrowDoubleDown'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/arrow-double-down.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['arrowDoubleLeft'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/arrow-double-left.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['arrowDoubleRight'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/arrow-double-right.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['arrowDoubleUp'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/arrow-double-up.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['arrowDown'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/arrow-down.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['arrowFirst'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/arrow-first.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['arrowHeadDown'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/arrow-head-down.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['arrowHeadLeft'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/arrow-head-left.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['arrowHeadRight'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/arrow-head-right.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['arrowHeadUp'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/arrow-head-up.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['arrowLast'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/arrow-last.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['arrowLeft'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/arrow-left.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['arrowRight'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/arrow-right.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['arrowUp'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/arrow-up.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['augmentedReality'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/augmented-reality.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['batteryEmpty'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/battery-empty.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['batteryFull'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/battery-full.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['bell'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/bell.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['bookmark'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/bookmark.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['broadcast'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/broadcast.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['calculator'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/calculator.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['calendar'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/calendar.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['camera'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/camera.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['car'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/car.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['carBattery'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/car-battery.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['card'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/card.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['chargingActive'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/charging-active.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['chargingState'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/charging-state.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['chargingStation'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/charging-station.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['chart'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/chart.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['chat'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/chat.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['check'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/check.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['city'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/city.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['climate'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/climate.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['climateControl'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/climate-control.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['clock'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/clock.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['close'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/close.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['closedCaption'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/closed-caption.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['co2Emission'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/co2-emission.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['compare'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/compare.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['configurate'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/configurate.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['countryRoad'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/country-road.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['cubicCapacity'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/cubic-capacity.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['delete'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/delete.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['disable'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/disable.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['document'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/document.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['download'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/download.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['duration'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/duration.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['edit'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/edit.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['email'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/email.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['exclamation'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/exclamation.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['external'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/external.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['filter'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/filter.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['flash'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/flash.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['fuelStation'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/fuel-station.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['garage'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/garage.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['gift'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/gift.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['globe'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/globe.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['grid'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/grid.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['highway'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/highway.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['home'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/home.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['horn'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/horn.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['image'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/image.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['increase'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/increase.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['information'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/information.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['key'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/key.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['leaf'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/leaf.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['leather'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/leather.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['light'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/light.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['list'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/list.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['locate'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/locate.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['lock'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/lock.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['lockOpen'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/lock-open.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoBaidu'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-baidu.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoDelicious'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-delicious.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoDigg'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-digg.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoFacebook'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-facebook.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoFoursquare'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-foursquare.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoGmail'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-gmail.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoGoogle'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-google.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoHatena'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-hatena.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoInstagram'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-instagram.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoKaixin'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-kaixin.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoKakaotalk'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-kakaotalk.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoLinkedin'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-linkedin.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoNaver'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-naver.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoPinterest'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-pinterest.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoQq'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-qq.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoQqShare'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-qq-share.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoReddit'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-reddit.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoSkyrock'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-skyrock.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoSohu'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-sohu.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoTecent'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-tecent.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoTelegram'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-telegram.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoTiktok'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-tiktok.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoTumblr'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-tumblr.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoTwitter'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-twitter.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoViber'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-viber.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoVk'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-vk.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoWechat'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-wechat.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoWeibo'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-weibo.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoWhatsapp'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-whatsapp.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoXing'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-xing.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoYahoo'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-yahoo.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoYouku'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-youku.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logoYoutube'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logo-youtube.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['logout'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/logout.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['map'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/map.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['menuDotsHorizontal'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/menu-dots-horizontal.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['menuDotsVertical'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/menu-dots-vertical.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['menuLines'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/menu-lines.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['minus'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/minus.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['mobile'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/mobile.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['moon'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/moon.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['oilCan'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/oil-can.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['parkingBrake'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/parking-brake.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['parkingLight'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/parking-light.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['pause'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/pause.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['phone'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/phone.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['pin'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/pin.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['play'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/play.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['plug'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/plug.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['plus'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/plus.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['preheating'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/preheating.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['printer'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/printer.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['purchase'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/purchase.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['question'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/question.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['racingFlag'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/racing-flag.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['refresh'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/refresh.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['replay'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/replay.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['reset'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/reset.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['route'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/route.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['rss'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/rss.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['save'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/save.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['screen'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/screen.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['search'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/search.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['send'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/send.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['share'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/share.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['shoppingBag'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/shopping-bag.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['shoppingCart'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/shopping-cart.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['sidelights'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/sidelights.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['snowflake'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/snowflake.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['sort'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/sort.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['stack'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/stack.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['star'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/star.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['steeringWheel'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/steering-wheel.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['stopwatch'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/stopwatch.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['subtract'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/subtract.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['success'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/success.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['sun'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/sun.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['switch'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/switch.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['tablet'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/tablet.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['tachometer'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/tachometer.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['truck'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/truck.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['upload'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/upload.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['user'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/user.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['userGroup'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/user-group.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['userManual'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/user-manual.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['video'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/video.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['view'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/view.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['viewOff'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/view-off.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['volumeOff'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/volume-off.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['volumeUp'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/volume-up.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['warning'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/warning.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['weight'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/weight.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['wifi'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/wifi.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['work'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/work.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['wrench'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/wrench.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['wrenches'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/wrenches.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['zoomIn'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/zoom-in.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return icon link for ['zoomOut'] 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/zoom-out.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return multiple links 1`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/truck.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return multiple links 2`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/truck.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;

exports[`getIconLinks() format jsx should return multiple links 3`] = `
<link
  as="image"
  crossOrigin="true"
  href="https://cdn.ui.porsche.com/porsche-design-system/icons/truck.min.*.svg"
  rel="prefetch"
  type="image/svg+xml"
/>
`;
